trunk for 0.3.0
---------------

*Changes that break backwards compatability*

Added api.py for importing. So the new convention for importing is

import scikits.statsmodels.api as sm

sandbox/output.py -> iolib/table.py
lib/io.py -> iolib/foreign.py (Now contains Stata .dta format reader)
family -> families
families.links.inverse -> families.links.inverse_power
Datasets' Load class is now load function.
regression.py -> regression/linear_model.py
discretemod.py -> discrete/discrete_model.py
rlm.py -> robust/robust_linear_model.py
glm.py -> genmod/generalized_linear_model.py
model.py -> base/model.py

*Main additions*
Numerous bugfixes
Time Series Analysis model (tsa)
    Vector Autoregression Models VAR (tsa.VAR)
    Autogressive Models AR (tsa.AR)
    Autoregressive Moving Average Models ARMA (tsa.ARMA)
      -optionally uses Cython for Kalman Filtering
      use setup.py install with option --with-cython
Improved maximum likelihood framework uses all available scipy.optimize solvers
Refactor of the datasets sub-package.
Added Nile River dataset.
Removed RPy dependency for running the test suite.
Refactored the test suite.
Refactored codebase/directory structure.
Support for offest and exposure in GLM.
Removed data_weights argument to GLM.fit for Binomial models.
Improved documentation



trunk for 0.2.0
---------------

*main changes*

 * renames for more consistency
   RLM.fitted_values -> RLM.fittedvalues
   GLMResults.resid_dev -> GLMResults.resid_deviance
 * GLMResults, RegressionResults:
   lazy calculations, convert attributes to properties with _cache
 * fix tests to run without rpy
 * expanded examples in examples directory
 * add PyDTA to lib.io -- functions for reading Stata *.dta binary files
   and converting
   them to numpy arrays
 * made tools.categorical much more robust
 * add_constant now takes a prepend argument
 * fix GLS to work with only a one column design

*new*

 * add four new datasets